// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`withJoseDates > leaves every non-temporal claim exactly as the wire carried it 1`] = `
{
  "aud": [
    "a",
    "b",
  ],
  "auth_time": undefined,
  "exp": undefined,
  "iat": undefined,
  "nbf": undefined,
  "sub": "user-1",
  "updated_at": 1600000000,
}
`;

exports[`withJoseDates > lifts every NumericDate temporal claim to a Date 1`] = `
{
  "auth_time": 2017-07-14T02:40:00.000Z,
  "exp": 2023-11-14T22:13:20.000Z,
  "iat": 2020-09-13T12:26:40.000Z,
  "nbf": 2022-04-15T05:20:00.000Z,
}
`;

exports[`withJoseDates > reports a ZERO temporal claim as undefined, the same as an absent one 1`] = `
{
  "auth_time": undefined,
  "exp": undefined,
  "iat": undefined,
  "nbf": undefined,
}
`;

exports[`withJoseDates > reports an ABSENT temporal claim as undefined rather than the epoch 1`] = `
{
  "auth_time": undefined,
  "exp": undefined,
  "iat": undefined,
  "nbf": undefined,
  "sub": "user-1",
}
`;
